Для подсчета IP адресов: добавил выбор произвольного файла, сделал единообразным вывод сообщений, вложил обработку файла в try-with-resources